# OpenStudioLandscapesUtil-ReadmeGenerator

./: .coveragerc  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/OpenStudioLandscapesUtil/ReadmeGenerator/: __init__.py  readme_generator.py  skeleton.py
tests/: conftest.py  test_skeleton.py
tests/fixtures/OpenStudioLandscapes/Ayon/: constants.py
